# frameworks-from-scratch

./: .env  .gitignore  Makefile  README.md  pyproject.toml
dot/input/: goldstein.dot  mean_square_loss.dot  mean_square_loss_func.dot  model.dot  sin.dot  tanh.dot
frameworks_from_scratch/: __init__.py  function.py  layer.py  optimizer.py  util.py  variable.py
frameworks_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: 0.7_ss_backpropagation.ipynb  ipython_startup.ipynb
tests/: test_frameworks_from_scratch.py  test_function.py
